Fix hightlight color visibility for span element

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -44,16 +44,22 @@
 	--purple-text: #a142f4;
 	--purple-text-dark: #bf96f4;
 	--highlight-color--red: #ffb9af;
+	--highlight-color--red-light: #FFD8CF;
 	--highlight-color--red-dark: #FFA39C;
 	--highlight-color--orange: #ffca8c;
+	--highlight-color--orange-light: #FFDEB7;
 	--highlight-color--orange-dark: #F3C082;
 	--highlight-color--yellow: #f1fa8c;
+	--highlight-color--yellow-light: #F8FAA5;
 	--highlight-color--yellow-dark: #DBD54B;
 	--highlight-color--green: #9fe39b;
+	--highlight-color--green-light: #C9F3C6;
 	--highlight-color--green-dark: #ACCEAD;
 	--highlight-color--blue: #bad7eb;
+	--highlight-color--blue-light: #D4EEFF;
 	--highlight-color--blue-dark: #B2D7EB;
 	--highlight-color--purple: #e6c9eb;
+	--highlight-color--purple-light: #F8EAFF;
 	--highlight-color--purple-dark: #DDC3F0;
 	--pdf-highlight-color-red: #ffd0c3;
 	--pdf-highlight-color-orange: #fddab6;
@@ -1490,6 +1496,25 @@
 		.highlight-color--blue {background-color: var(--highlight-color--blue);}
 		.highlight-color--purple {background-color: var(--highlight-color--purple);}
 
+		.RichTextViewer {
+			.highlight-color--red {background-color: var(--highlight-color--red-light);}
+			.highlight-color--orange {background-color: var(--highlight-color--orange-light);}
+			.highlight-color--yellow {background-color: var(--highlight-color--yellow-light);}
+			.highlight-color--green {background-color: var(--highlight-color--green-light);}
+			.highlight-color--blue {background-color: var(--highlight-color--blue-light);}
+			.highlight-color--purple {background-color: var(--highlight-color--purple-light);}
+		}
+		[data-slate-node="element"] {
+			[data-slate-node~="text"] {
+				.highlight-color--red {background-color: var(--highlight-color--red-light);}
+				.highlight-color--orange {background-color: var(--highlight-color--orange-light);}
+				.highlight-color--yellow {background-color: var(--highlight-color--yellow-light);}
+				.highlight-color--green {background-color: var(--highlight-color--green-light);}
+				.highlight-color--blue {background-color: var(--highlight-color--blue-light);}
+				.highlight-color--purple {background-color: var(--highlight-color--purple-light);}
+			}
+		}
+
 		.dark-mode {
 			.highlight-color--red {background-color: var(--highlight-color--red-dark);}
 			.highlight-color--orange {background-color: var(--highlight-color--orange-dark);}
@@ -1497,6 +1522,25 @@
 			.highlight-color--green {background-color: var(--highlight-color--green-dark);}
 			.highlight-color--blue {background-color: var(--highlight-color--blue-dark);}
 			.highlight-color--purple {background-color: var(--highlight-color--purple-dark);}
+
+			.RichTextViewer {
+				.highlight-color--red {background-color: var(--highlight-color--red-dark);}
+				.highlight-color--orange {background-color: var(--highlight-color--orange-dark);}
+				.highlight-color--yellow {background-color: var(--highlight-color--yellow-dark);}
+				.highlight-color--green {background-color: var(--highlight-color--green-dark);}
+				.highlight-color--blue {background-color: var(--highlight-color--blue-dark);}
+				.highlight-color--purple {background-color: var(--highlight-color--purple-dark);}
+			}
+			[data-slate-node="element"] {
+				[data-slate-node~="text"] {
+					.highlight-color--red {background-color: var(--highlight-color--red-dark);}
+					.highlight-color--orange {background-color: var(--highlight-color--orange-dark);}
+					.highlight-color--yellow {background-color: var(--highlight-color--yellow-dark);}
+					.highlight-color--green {background-color: var(--highlight-color--green-dark);}
+					.highlight-color--blue {background-color: var(--highlight-color--blue-dark);}
+					.highlight-color--purple {background-color: var(--highlight-color--purple-dark);}
+				}
+			}
 		}
 	// Document Title Highlight Style
 		#DocumentTitle {
